update adout and education

--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
   
   <!-- ======= Start Google Tag Manager (noscript) ======= -->
 
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5BB8W2X"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5BB8W2X" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+  </noscript>
   
   <!-- ======= End Google Tag Manager (noscript) ======= -->
 
@@ -129,18 +130,20 @@
       </div>
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/about/max_planck.jpg" class="img-fluid" alt="">
+          <img src="assets/img/about/photo.png" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>
-            Hi there, my name is Ashrith Reddy. I am a Full Stack Developer with 7+ years of experience. My areas of interest are signal processing and
-            communications, machine learning, robotics, and software development.
+            Hi there, my name is Ashrith Reddy. I am a Full Stack Developer with 7+ years of experience.
+            Experience in designing, developing, testing, and maintenance/operation of web applications.
+            Currently focused on creating great user experience in ReactJS.
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Istanbul, Turkey</li>
-                <li><i class="icofont-rounded-right"></i> <strong>E&#8209;mail:</strong> arasgungore09@gmail.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Fort Myers, FL, 33908</li>
+                <li><i class="icofont-rounded-right"></i> <strong>E&#8209;mail:</strong> ashrith.reddy@gmail.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> (239) 788-6451</li>
               </ul>
             </div>
           </div>
@@ -163,68 +166,94 @@
       <div class="row">
         <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <a href="http://www.boun.edu.tr/en_US" target="_blank"><img src="assets/img/education/boun_transparent.png" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90"></a>
-            <h4 style="text-align:left;"><a href="http://www.boun.edu.tr/en_US" target="_blank" style="color:#12d640">Boğaziçi University</a><br> </h4>
-            <h5 style="text-align:left;"><em>Bachelor of Science in Electrical and Electronics Engineering; <strong>GPA: 3.73/4.00</strong></em></h5>
-            <span class="left" style="float:left;color:#fff;"><em>September 2018 - Present</em></span>
-            <span class="right" style="float:right;color:#fff;"><em>Istanbul, Turkey</em></span><br><br>
-            <h6 style="text-align:left;"><strong>National University Admission Exam (YKS):</strong> Ranked 75<sup>th</sup> in Mathematics and Science among ca. 2.3 million candidates with a test score of 489.92/500.</h6>
+            <a href="https://www.fgcu.edu/" target="_blank">
+              <img src="assets/img/education/FGCU.svg" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90">
+            </a>
+            <h4 style="text-align:left;">
+              <a href="https://www.fgcu.edu/" target="_blank" style="color:#12d640">Florida Gulf Coast University</a>
+              <br> 
+            </h4>
+            <h5 style="text-align:left;"><em>Master of Science in Info Systems & Analytics; <strong>GPA: 3.78/4.00</strong></em></h5>
+            <span class="left" style="float:left;color:#fff;"><em>November 2020 - December 2023 (Expected)</em></span>
+            <span class="right" style="float:right;color:#fff;"><em>Florida, US</em></span><br><br>
             <h6 style="text-align:left;">Relevant coursework:</h6>
             <ul style="columns:2;text-align:left;">
-              <li>Calculus I&#8209;II</li>
-              <li>Matrix Theory</li>
+              <li>Bus Proc Analysis & Innovation</li>
+              <li>Data Management</li>
+              <li>Project Management</li>
+              <li>Information Technology Strategy</li>
+              <li>Business Programming</li>
+              <li>Practicum in Info Systems</li>
+              <li>Big Data Management</li>
+              <li>Predictive Analytics</li>
+              <li>Business Analytics</li>
+              <li>BI and Visualization Tools</li>
+              <li>Enterprise Systems</li>
+              <li>Cybersecurity</li>
+              <li>IT Infrastructures & Networks</li>
+              <li>Web, Mobile, & Social Technol.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-12" data-aos="fade-up">
+          <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+            <a href="https://www.fgcu.edu/" target="_blank">
+              <img src="assets/img/education/FGCU.svg" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90">
+            </a>
+            <h4 style="text-align:left;">
+              <a href="https://www.fgcu.edu/" target="_blank" style="color:#12d640">Florida Gulf Coast University</a>
+              <br> 
+            </h4>
+            <h5 style="text-align:left;"><em>Bachelor of Science in Computer Information Systems; <strong>GPA: 3.83/4.00</strong></em></h5>
+            <span class="left" style="float:left;color:#fff;"><em>September 2019 - December 2020</em></span>
+            <span class="right" style="float:right;color:#fff;"><em>Florida, US</em></span><br><br>
+            <h6 style="text-align:left;">Relevant coursework:</h6>
+            <ul style="columns:2;text-align:left;">
+              <li>General Mathematics</li>
+              <li>Statistical Methods</li>
               <li>Differential Equations</li>
               <li>Materials Science</li>
-              <li>Electrical Circuits I&#8209;II</li>
+              <li>Systems Analysis & Design</li>
+              <li>Database Concepts & Admin</li>
+              <li>Info Systems Integration</li>
+              <li>Network Security</li>
+              <li>Business Analytics</li>
+              <li>Supply Chain Management</li>
               <li>Digital System Design</li>
-              <li>Numerical Methods</li>
-              <li>Probability Theory</li>
-              <li>Electronics I&#8209;II</li>
-              <li>Signals and Systems</li>
-              <li>Electromagnetic Field Theory</li>
-              <li>Energy Conversion</li>
-              <li>System Dynamics and Control</li>
-              <li>Communication Engineering</li>
+              <li>Introduction to Programming</li>
+              <li>Programming Methodology</li>
+              <li>Object-Oriented Programming</li>
+              <li>University Colloquium</li>
             </ul>
           </div>
         </div>
         <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <a href="http://www.boun.edu.tr/en_US" target="_blank"><img src="assets/img/education/boun_transparent.png" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90"></a>
-            <h4 style="text-align:left;"><a href="http://www.boun.edu.tr/en_US" target="_blank" style="color:#12d640">Boğaziçi University</a><br> </h4>
-            <h5 style="text-align:left;"><em>Minor Degree in Computer Engineering; <strong>GPA: 3.89/4.00</strong></em></h5>
-            <span class="left" style="float:left;color:#fff;"><em>October 2020 - Present</em></span>
-            <span class="right" style="float:right;color:#fff;"><em>Istanbul, Turkey</em></span><br><br>
+            <a href="https://www.fsw.edu/" target="_blank">
+              <img src="assets/img/education/FSW.png" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90">
+            </a>
+            <h4 style="text-align:left;">
+              <a href="https://www.fsw.edu/" target="_blank" style="color:#12d640">Florida Southwestern State College</a>
+              <br>
+            </h4>
+            <h5 style="text-align:left;"><em>Associate in Arts; <strong>GPA: 3.89/4.00</strong></em></h5>
+            <span class="left" style="float:left;color:#fff;"><em>September 2016 - August 2018</em></span>
+            <span class="right" style="float:right;color:#fff;"><em>Florida, US</em></span><br><br>
             <h6 style="text-align:left;">Relevant coursework:</h6>
             <ul style="columns:2;text-align:left;">
-              <li>Discrete Computational Structures</li>
-              <li>Introduction to Object&#8209;Oriented Programming</li>
-              <li>Data Structures and Algorithms</li>
+              <li>Composition I&#8209;II</li>
+              <li>Art Appriciation</li>
+              <li>Literature of the United States I&#8209;II</li>
+              <li>Introduction to Poetry Writing</li>
+              <li>Exploring Emerging Technologies</li>
+              <li>Special Topics in Arts and Sciences</li>
+              <li>Principles of Microeconomics</li>
+              <li>College Algebra</li>
+              <li>Mathematics for Liberal Arts I&#8209;II</li>
+              <li>Statistical Methods I</li>
+              <li>Biological Science</li>
+              <li>Anatomy and Physiology I</li>
             </ul>
-          </div>
-        </div>
-        <div class="col-lg-12" data-aos="fade-up">
-          <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <a href="https://kocaelifenlisesi.meb.k12.tr/" target="_blank"><img src="assets/img/education/kfl_transparent.png" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90"></a>
-            <h4 style="text-align:left;"><a href="https://kocaelifenlisesi.meb.k12.tr/" target="_blank" style="color:#12d640">Kocaeli Science High School</a><br> </h4>
-            <h5 style="text-align:left;"><em>High School Diploma; <strong>GPA: 97.03/100</strong></em></h5>
-            <span class="left" style="float:left;color:#fff;"><em>September 2014 - June 2018</em></span>
-            <span class="right" style="float:right;color:#fff;"><em>Kocaeli, Turkey</em></span><br><br>
-            <h6 style="text-align:left;"><strong>Kocaeli Science High School Salutatorian Award:</strong> Graduated as the second&#8209;highest ranked student in my class.</h6>
-          </div>
-        </div>
-        <div class="col-lg-12" data-aos="fade-up">
-          <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <a href="https://kyiv.qsi.org/" target="_blank"><img src="assets/img/education/kis_transparent.png" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90"></a>
-            <h4 style="text-align:left;"><a href="https://kyiv.qsi.org/" target="_blank" style="color:#12d640">Kyiv International School</a><br> </h4>
-            <h5 style="text-align:left;"><em>Primary Education</em></h5>
-            <span class="left" style="float:left;color:#fff;"><em>August 2008 - December 2009</em></span>
-            <span class="right" style="float:right;color:#fff;"><em>Kyiv, Ukraine</em></span><br><br>
-            <h6 style="text-align:left;">
-              With over 770 students of 50 different nationalities, the Preschool through Secondary School programs at Kyiv International School
-              focus on the development of 21st Century Learning skills such as critical thinking and problem solving; leadership and collaboration;
-              cultural awareness and digital literacy.
-            </h6>
           </div>
         </div>
       </div>
