--- a/index.html
+++ b/index.html
@@ -738,11 +738,9 @@
             <i class="bx bx-share-alt"></i>
             <h3 style="color:#12d640;">Social Profiles</h3>
             <div class="social-links">
-              <a href="mailto:arasgungore09@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
-              <a href="https://www.linkedin.com/in/arasgungore" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-              <a href="https://github.com/arasgungore" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-              <a href="https://www.hackerrank.com/arasgungore" target="_blank" class="hackerrank"><img class="svg" src="assets/img/social/hackerrank.svg" width="13" /></a>
-              <a href="https://leetcode.com/arasgungore" target="_blank" class="leetcode"><img class="svg" src="assets/img/social/leetcode.svg" width="13" /></a>
+              <a href="mailto:ashrith.reddy@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
+              <a href="https://www.linkedin.com/in/ashrith-reddy" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://github.com/Ashrith1612" target="_blank" class="github"><i class="bx bxl-github"></i></a>
             </div>
           </div>
         </div>
@@ -750,8 +748,8 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3 style="color:#12d640;">E&#8209;mail</h3>
-            <a href="mailto:arasgungore09@gmail.com" target="_blank"> <p><i class="icofont-rounded-right"></i> arasgungore09@gmail.com</p> </a>
-            <a href="mailto:aras.gungore@boun.edu.tr" target="_blank"> <p><i class="icofont-rounded-right"></i> aras.gungore@boun.edu.tr</p> </a>
+            <a href="mailto:ashrith.reddy@gmail.com" target="_blank"> <p><i class="icofont-rounded-right"></i> ashrith.reddy@gmail.com</p> </a>
+            <a href="mailto:avaridhireddy7991@eagle.fgcu.edu" target="_blank"> <p><i class="icofont-rounded-right"></i> avaridhireddy7991@eagle.fgcu.edu</p> </a>
           </div>
         </div>
       </div>
