--- a/index.html
+++ b/index.html
@@ -108,11 +108,9 @@
         </ul>
       </nav>
       <div class="social-links">
-        <a href="mailto:arasgungore09@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
-        <a href="https://www.linkedin.com/in/arasgungore" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="https://github.com/arasgungore" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-        <a href="https://www.hackerrank.com/arasgungore" target="_blank" class="hackerrank"><img class="svg" src="assets/img/social/hackerrank.svg" width="13" /></a>
-        <a href="https://leetcode.com/arasgungore" target="_blank" class="leetcode"><img class="svg" src="assets/img/social/leetcode.svg" width="13" /></a>
+        <a href="mailto:ashrith.reddy@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
+        <a href="https://www.linkedin.com/in/ashrith-reddy" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://github.com/Ashrith1612" target="_blank" class="github"><i class="bx bxl-github"></i></a>
       </div>
     </div>
   </header>
@@ -402,33 +400,34 @@
       </div>
       <div class="row">
         <div class="col-lg-12" data-aos="fade-up" style="display:inline-block;">
-          <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom:5px;display:inline-block;">
-            <a href="https://github.com/arasgungore/filters-and-fractals" target="_blank" rel="noreferrer"><img style="padding:5px 5px;" src="assets/img/projects/image_manipulation_and_fractals.jpg" class="img-fluid" width="300" height="300"></a>
-            <a href="https://github.com/arasgungore/filters-and-fractals" target="_blank" rel="noreferrer"><h5 style="padding:5px 5px;color:#12d640"><strong>Filters and Fractals</strong></h5></a>
-            <p style="padding:0px 2px;color:#fff;">A C project which implements various image processing operations and recursive fractal generating algorithms.</p>
+          <div class="col-md-4 mt-8 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px;display:inline-block;">
+            <a href="https://github.com/Ashrith1612/Prolog-App" target="_blank" rel="noreferrer">
+              <img class="project-image" src="assets/img/projects/prolog.png" alt="Prolog">
+              <h5 style="padding-top:8px;color:#12d640"><strong>Prolog</strong></h5>
+            </a>
+            <p style="padding: 8px;margin-bottom: 8px;color:#fff;">The application is an error logging and monitoring tool similar to Sentry or Rollbar.</p>
           </div>
-          <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom:5px;display:inline-block;">
-            <a href="https://github.com/arasgungore/N-puzzle-solver" target="_blank" rel="noreferrer"><img style="padding:5px 5px;" src="assets/img/projects/n_puzzle_solver.jpg" class="img-fluid" width="324" height="324"></a>
-            <a href="https://github.com/arasgungore/N-puzzle-solver" target="_blank" rel="noreferrer"><h5 style="padding:5px 5px;color:#12d640"><strong>N&#8209;Puzzle Solver</strong></h5></a>
-            <p style="padding:0px 2px;color:#fff;">A C++ project which efficiently solves any given N&#8209;puzzle using backtracking on a decision tree.</p>
+          <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px;display:inline-block;">
+            <a href="https://github.com/Ashrith1612/Mortgage-Calculator" target="_blank" rel="noreferrer">
+              <img class="project-image" src="assets/img/projects/mortgage.png" alt="Mortgage">
+              <h5 style="padding-top:8px;color:#12d640"><strong>Mortgage</strong></h5>
+            </a>
+            <p style="padding: 8px;margin-bottom: 8px;color:#fff;">Mortgage overpayment calculator using React with Hooks and D3.</p>
           </div>
-          <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom:5px;display:inline-block;">
-            <a href="https://github.com/arasgungore/butterworth-filter" target="_blank" rel="noreferrer"><img style="padding:5px 5px;" src="assets/img/projects/butterworth_filter.jpg" class="img-fluid" width="300" height="300"></a>
-            <a href="https://github.com/arasgungore/butterworth-filter" target="_blank" rel="noreferrer"><h5 style="padding:5px 5px;color:#12d640"><strong>Butterworth Filter</strong></h5></a>
-            <p style="padding:0px 2px;color:#fff;">An LTspice project which contains third&#8209;order Butterworth filters built both using an inductor and a current conveyor.</p>
+          <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px;display:inline-block;">
+            <a href="https://github.com/Ashrith1612/React-Messenger" target="_blank" rel="noreferrer">
+              <img class="project-image" src="assets/img/projects/messenger.png" alt="Messenger">
+              <h5 style="padding-top:8px;color:#12d640"><strong>Funny Messenger</strong></h5>
+            </a>
+            <p style="padding: 8px;margin-bottom: 8px;color:#fff;">A one-to-one realtime chat app using React, Node.js, and PostgreSQL.</p>
           </div>
-          <!--
-          <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom:5px;display:inline-block;">
-            <a href="https://github.com/arasgungore/chess-bot" target="_blank" rel="noreferrer"><img style="padding:5px 5px;" src="assets/img/projects/word_game.jpg" class="img-fluid"></a>
-            <a href="https://github.com/arasgungore/chess-bot" target="_blank" rel="noreferrer"><h5 style="padding:5px 5px;color:#12d640"><strong>Word Game</strong></h5></a>
-            <p style="padding:0px 2px;color:#fff;">A C++ project in which you can play the Turkish game show “Kelime Oyunu” (Word Game) on the terminal.</p>
+          <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px;display:inline-block;">
+            <a href="https://github.com/Ashrith1612/TodoList" target="_blank" rel="noreferrer">
+              <img class="project-image" src="assets/img/projects/todoist.png" alt="TodoList">
+              <h5 style="padding-top:8px;color:#12d640"><strong>TodoList</strong></h5>
+            </a>
+            <p style="padding: 8px;margin-bottom: 8px;color:#fff;">Building TodoList from Scratch Using React (Custom Hooks, Context), Firebase & React Testing Library.</p>
           </div>
-          <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom:5px;display:inline-block;">
-            <a href="https://github.com/arasgungore/rocket-flight-simulator" target="_blank" rel="noreferrer"><img style="padding:5px 5px;" src="assets/img/projects/rocket_flight_simulator.jpg" class="img-fluid"></a>
-            <a href="https://github.com/arasgungore/rocket-flight-simulator" target="_blank" rel="noreferrer"><h5 style="padding:5px 5px;color:#12d640"><strong>Rocket Flight Simulator</strong></h5></a>
-            <p style="padding:0px 2px;color:#fff;">A Simulink project which can accurately simulate the motion of a flying rocket in one&#8209;dimensional space.</p>
-          </div>
-          -->
         </div>
       </div>
     </div>
@@ -712,11 +711,6 @@
           <h4 class="title"><a style="color:#12d640;" href="https://drive.google.com/file/d/1TGwMpZl6FDeQk1w_-EetbspCuzu16kCF/view?usp=sharing" target="_blank">Curriculum Vitae</a></h4>
           <p class="description" style="color:#fff;">The above link contains my CV. Also, you can check out the code for this CV <a href="https://github.com/arasgungore/arasgungore-CV" target="_blank">here</a>.</p>
         </div>
-        <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-          <a href="https://resume.github.io/?arasgungore" target="_blank"><div class="icon"><i class="bx bxl-github"></i></div></a>
-          <h4 class="title"><a style="color:#12d640;" href="https://resume.github.io/?arasgungore" target="_blank">GitHub Résumé</a></h4>
-          <p class="description" style="color:#fff;">The above link contains my résumé based on my GitHub repos/activity. Also, you can check out the code for this résumé <a href="https://github.com/resume/resume.github.com" target="_blank">here</a>.</p>
-        </div>
       </div>
     </div>
   </section>
@@ -797,7 +791,7 @@
 
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["a Student", "an Engineer", "a Coder"],
+      strings: ["a Full Stack Developer", "a Web Expert"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
