--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>My Portfolio</title>
+  <title>Ashrith Reddy</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -272,113 +272,116 @@
       <div class="row">
         <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <a href="https://is.mpg.de/" target="_blank"><img src="assets/img/experience/mpi_transparent.png" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90"></a>
-            <h4 style="text-align:left;"><a href="https://is.mpg.de/" target="_blank" style="color:#12d640">Max Planck Institute for Intelligent Systems</a><br> </h4>
-            <h5 style="text-align:left;"><em>Undergraduate Research Assistant</em></h5>
-            <span class="left" style="float:left;color:#fff;"><em>June 2022 - August 2022</em></span>
-            <span class="right" style="float:right;color:#fff;"><em>Stuttgart, Baden-Württemberg, Germany</em></span><br><br>
+            <a href="https://www.willscot.com/" target="_blank">
+              <img src="assets/img/experience/william-scottsman.png" class="company-logo" />
+            </a>
+            <h4 style="text-align:left;">
+              <a href="https://www.willscot.com/" target="_blank" style="color:#12d640">William Scottsman</a><br>
+            </h4>
+            <h5 style="text-align:left;"><em>Full Stack Developer</em></h5>
+            <span class="left" style="float:left;color:#fff;"><em>October 2021 - Apirl 2022</em></span>
+            <span class="right" style="float:right;color:#fff;"><em>Florida, US</em></span><br><br>
             <ul style="text-align:left;">
               <li>
-                Worked in the Physical Intelligence Department with Sinan Özgün Demir and Alp Can Karacakol on a project
-                about 3D printing and heat&#8209;assisted magnetic programming of soft machines.
+                Developed code following common security practices and development design patterns.
               </li>
               <li>
-                Updated a ROS package for converting 3D motion controller events to ROS messages so that it synchronously
-                operates at any given loop rate.
+                Wrote 200+ unit tests to verify the functionality of user interfaces, backend processing, connectivity, and relational database interactions.
               </li>
               <li>
-                Implemented an Arduino Mega driver for controlling a fluid dispenser, a laser, thermocouples, and a coil set.
-                Updated ROS nodes for parsing G&#8209;codes and controlling stage movement and built the ROS&#8209;Arduino
-                communication network to simulate a 3D printing and magnetic programming process.
+                Analyzed systems flow, data usage, and work processes, investigated 100% problem areas.
               </li>
             </ul>
           </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <a href="http://nrg.boun.edu.tr/" target="_blank"><img src="assets/img/experience/nrg_transparent.png" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90"></a>
-            <h4 style="text-align:left;"><a href="http://nrg.boun.edu.tr/" target="_blank" style="color:#12d640">Nanonetworking Research Group, Boğaziçi University</a><br> </h4>
-            <h5 style="text-align:left;"><em>Undergraduate Research Assistant</em></h5>
-            <span class="left" style="float:left;color:#fff;"><em>October 2021 - Present</em></span>
-            <span class="right" style="float:right;color:#fff;"><em>Istanbul, Turkey</em></span><br><br>
+            <a href="https://www.hyundaiusa.com/us/en" target="_blank">
+              <img src="assets/img/experience/dynamic-signal.jpg" class="company-logo" />
+            </a>
+            <h4 style="text-align:left;">
+              <a href="https://www.hyundaiusa.com/us/en" target="_blank" style="color:#12d640">Dynamic Signal by Firstup</a><br>
+            </h4>
+            <h5 style="text-align:left;"><em>Full Stack Developer</em></h5>
+            <span class="left" style="float:left;color:#fff;"><em>May 2020 - September 2021</em></span>
+            <span class="right" style="float:right;color:#fff;"><em>Florida, US</em></span><br><br>
             <ul style="text-align:left;">
               <li>
-                Currently working with Assoc. Prof. Ali Emre Pusane on the project “Design and Implementation of Molecular
-                Communication Systems Using Index Modulation” under the TÜBİTAK 2247&#8209;C Intern Researcher Scholarship
-                Program (STAR).
+                Wrote structued, tested, readable, and maintainable code.
               </li>
               <li>
-                Simulated the Brownian motion of molecules in a SISO MCvD system and predicted simulation parameters such as
-                receiver radius, diffusion coefficient, and transmitter&#8209;receiver distance using CNNs with Python.
+                Helped maintain code quality, organization, and automatization for application.
               </li>
               <li>
-                Plotted the arrival of molecules per symbol duration in a SISO MCvD system using Binomial, Poisson, and
-                Gaussian model approximations with MATLAB.
-              </li>
-              <li>
-                Ran Monte Carlo simulations of the Gaussian model to encode/decode randomized binary sequences in a SISO
-                MCvD system using BCSK modulation technique and calculated the bit error rate (BER) on Z&#8209;channel.
+                Developed web applications and components using React.js, including unit tests.
               </li>
             </ul>
           </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <a href="https://www.sestek.com/" target="_blank"><img src="assets/img/experience/sestek_transparent.png" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90"></a>
-            <h4 style="text-align:left;"><a href="https://www.sestek.com/" target="_blank" style="color:#12d640">SESTEK Speech Enabled Software Technologies</a><br> </h4>
-            <h5 style="text-align:left;"><em>Natural Language Processing R&D Intern</em></h5>
-            <span class="left" style="float:left;color:#fff;"><em>January 2022 - February 2022</em></span>
-            <span class="right" style="float:right;color:#fff;"><em>Istanbul, Turkey</em></span><br><br>
+            <a href="https://www.hyundaiusa.com/us/en" target="_blank">
+              <img src="assets/img/experience/hyundai.jpg" class="company-logo" />
+            </a>
+            <h4 style="text-align:left;">
+              <a href="https://www.hyundaiusa.com/us/en" target="_blank" style="color:#12d640">Hyundai Fountaion Valley</a><br>
+            </h4>
+            <h5 style="text-align:left;"><em>Full Stack Developer</em></h5>
+            <span class="left" style="float:left;color:#fff;"><em>December 2018 - Apirl 2020</em></span>
+            <span class="right" style="float:right;color:#fff;"><em>Florida, US</em></span><br><br>
             <ul style="text-align:left;">
               <li>
-                Implemented common NLP tasks using transformers such as named&#8209;entity recognition (NER), part&#8209;of&#8209;speech (POS)
-                tagging, sentiment analysis, text classification, and extractive/generative question answering.
+                Built out the user authentication workflow for a B2B app in the finance industry.
               </li>
               <li>
-                Built a generative question answering system via Dense Passage Retrieval (DPR) and Retrieval&#8209;Augmented
-                Generation (RAG) using the Haystack framework with Python.
+                Worked alongside two other developers to build a web app that allows designers to add image recognition to their project
+                using Node.js on the back-end and React on the front-end.
               </li>
               <li>
-                Worked on a custom Turkish open&#8209;domain question answering system by fine&#8209;tuning a BERT base model
-                transformer. Evaluated the exact match and F1 scores using different Turkish data sets and compared the
-                evaluation results.
+                Developed a highly visible web-app for the people operations team to manage all information related to the organization
+                from structure to compensation to performance feedback using a React front-end and Node back-end with MySQL.
               </li>
             </ul>
           </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <a href="https://www.ankara.bel.tr/en/" target="_blank"><img src="assets/img/experience/abb_transparent.png" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90"></a>
-            <h4 style="text-align:left;"><a href="https://www.ankara.bel.tr/en/" target="_blank" style="color:#12d640">Ankara Metropolitan Municipality</a><br> </h4>
-            <h5 style="text-align:left;"><em>SCADA Engineering Intern</em></h5>
-            <span class="left" style="float:left;color:#fff;"><em>August 2021 - September 2021</em></span>
-            <span class="right" style="float:right;color:#fff;"><em>Ankara, Turkey</em></span><br><br>
+            <a href="https://fconline.foundationcenter.org/fdo-grantmaker-profile/?key=CENT491" target="_blank">
+              <img src="assets/img/experience/centene.jpeg" class="company-logo" />
+            </a>
+            <h4 style="text-align:left;">
+              <a href="https://fconline.foundationcenter.org/fdo-grantmaker-profile/?key=CENT491" target="_blank" style="color:#12d640">Cenete Foundation for Quality Healthcare</a><br>
+            </h4>
+            <h5 style="text-align:left;"><em>Frontend Developer</em></h5>
+            <span class="left" style="float:left;color:#fff;"><em>July 2017 - November 2018</em></span>
+            <span class="right" style="float:right;color:#fff;"><em>Florida, US</em></span><br><br>
             <ul style="text-align:left;">
               <li>
-                Designed GSM/GPRS&#8209;based electrical control panels that are connected to local water pump automation systems.
-                Pump station panels use digital output data received from the SCADA control center via RF transmission to
-                control valves and pumps. Tank station panels are charged from the PV system and refill water tanks by signaling
-                the pump station panel when the float switch is activated.
+                Involved in project plain meetings with clients, business analysts, and team members to analyze business requirements
+                and translated business requirements into the working model using Agile methodology.
               </li>
               <li>
-                Implemented motor control circuits by reading their PLC ladder diagrams and analyzed the EPLAN project
-                documentation, HMI, and hardware components of an RTU panel.
+                Developed a user-friendly interface to seamlessly combine the new module with the existing login system by using React.js.
+              </li>
+              <li>
+                Designed and developed simulators, validators and integrated them with automation frameworks enabling
+                team to reach automation goals.
               </li>
             </ul>
           </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <a href="https://www.meteksan.com/en/" target="_blank"><img src="assets/img/experience/meteksan_transparent.png" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90"></a>
-            <h4 style="text-align:left;"><a href="https://www.meteksan.com/en/" target="_blank" style="color:#12d640">Meteksan Defense Industry Inc.</a><br> </h4>
-            <h5 style="text-align:left;"><em>Analog Design Engineering Intern</em></h5>
-            <span class="left" style="float:left;color:#fff;"><em>July 2021 - August 2021</em></span>
-            <span class="right" style="float:right;color:#fff;"><em>Ankara, Turkey</em></span><br><br>
+            <a href="https://aighospitals.com/" target="_blank">
+              <img src="assets/img/experience/aig-hospital.jpg" class="company-logo" />
+            </a>
+            <h4 style="text-align:left;">
+              <a href="https://aighospitals.com/" target="_blank" style="color:#12d640">AIG Hospitals</a><br>
+            </h4>
+            <h5 style="text-align:left;"><em>Frontend Developer</em></h5>
+            <span class="left" style="float:left;color:#fff;"><em>November 2017 - June 2017</em></span>
+            <span class="right" style="float:right;color:#fff;"><em>Florida, US</em></span><br><br>
             <ul style="text-align:left;">
               <li>
-                Designed numerous analog circuits such as voltage&#8209;mode controlled buck converter, phase&#8209;shifted full&#8209;bridge
-                isolated DC&#8209;DC converter, and EMI filters with LTspice. Integrated these circuits and implemented a 320 W power
-                distribution unit to be used in a radar system’s power circuit board.
+                Responsible for writing clean code, product planning, driving technical design, and owning technical delivery.
               </li>
               <li>
-                Researched real&#8209;world compatible electronic components to be used in such circuits including GaNFETs, high&#8209;side
-                gate drivers, and Schottky diodes.
+                Proponent of pre-development technical design review, pair programming, and testing best practices.
               </li>
               <li>
-                Assembled PCBs of both common and differential mode filters and used VNA Bode 100 to measure the cut&#8209;off
-                frequencies.
+                Encourage engineers to engage in the customer problem and not just the technical solution.
               </li>
             </ul>
           </div>
